<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_writing"
        android:icon="@drawable/baseline_create_24"
        android:iconTint="@color/black"
        android:title="@string/title_writing" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/baseline_person_24"
        android:iconTint="@color/black"
        android:title="@string/title_mypage" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/baseline_more_horiz_24"
        android:iconTint="@color/black"
        android:title="@string/title_more" />

</menu>